Structure and styling added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" href="/resources/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
     <section>
-      <h1 class="sectionheader">Discover hidden places in the world around you</h1>
+      <h1 class="sectionheader" id="hook">Discover hidden places in the world around you</h1>
       <a href="#">Download Excursion (Coming Soon!)</a>
+      <br>
+      <br>
+      <video src="resources/videos/excursion.mp4" alt="" autoplay loop type=video/mp4></video>
     </section>
+
+    <section>
+      <h1 class="sectionheader">Your personal travel guide</h1>
+      <h2 class="purpose">Excursion remembers places you like, and recommends new points of interest around you.</h2>
+      <img src="resources/images/camp.jpg" alt="">
+      <br>
+      <br>
+    </section>
+
+    <section>
+      <img src="resources/images/phone.png" alt="">
+      <h1 class="sectionheader">Coming Soon for iPhone and Android</h1>
+      <a href="#">Download Excursion (Coming Soon!)</a>
+      <br>
+      <br>
+    </section>
+
+    <footer>&copy Excursion</footer>
   </body>
 </html>
